--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <title>Curling butterfly</title>
     <script src="lib/dat.gui.min.js" type="text/javascript"></script>
-    <script src="lib/coffeescript.js"type="text/javascript"> </script>
 </head>
 <body>
-<canvas id="cvs" width="1024" height="1024"/>
+<canvas id="cvs" width="1024" height="1024"></canvas>
+<script src="lib/coffeescript.js"type="text/javascript"> </script>
 <script src="src/02.coffee" type="text/coffeescript"></script>
 </body>
 </html>
