--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
     <title>Curling butterfly</title>
+    <script src="lib/coffeescript.js"type="text/javascript"> </script>
     <script src="lib/dat.gui.min.js" type="text/javascript"></script>
+    <script src="lib/rhill-voronoi-core.min.js" type="text/javascript"></script>
+    <script src="lib/delaunator.min.js" type="text/javascript"></script>
 </head>
 <body>
 <canvas id="cvs" width="1024" height="1024"></canvas>
-<script src="lib/coffeescript.js"type="text/javascript"> </script>
 <script src="src/02.coffee" type="text/coffeescript"></script>
 </body>
 </html>
